--- a/website/tfe.erb
+++ b/website/tfe.erb
@@ -6,91 +6,32 @@
                     <a href="/docs/providers/index.html">All Providers</a>
                 </li>
 
-                <li<%= sidebar_current("docs-tfe-index") %>>
-                    <a href="/docs/providers/tfe/index.html">Terraform Enterprise Provider</a>
+                <li<%= sidebar_current("docs-scalr-index") %>>
+                    <a href="/docs/providers/scalr/index.html">Scalr Provider</a>
                 </li>
 
-                <li<%= sidebar_current("docs-tfe-datasource") %>>
+                <li<%= sidebar_current("docs-scalr-datasource") %>>
                     <a href="#">Data Sources</a>
                     <ul class="nav nav-visible">
-                        <li<%= sidebar_current("docs-datasource-tfe-ssh-key") %>>
-                            <a href="/docs/providers/tfe/d/ssh_key.html">tfe_ssh_key</a>
+                        <li<%= sidebar_current("docs-datasource-scalr-workspace-x") %>>
+                            <a href="/docs/providers/scalr/d/workspace.html">scalr_workspace</a>
                         </li>
 
-                        <li<%= sidebar_current("docs-datasource-tfe-team-x") %>>
-                            <a href="/docs/providers/tfe/d/team.html">tfe_team</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-datasource-tfe-team-access") %>>
-                            <a href="/docs/providers/tfe/d/team_access.html">tfe_team_access</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-datasource-tfe-workspace-x") %>>
-                            <a href="/docs/providers/tfe/d/workspace.html">tfe_workspace</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-datasource-tfe-workspace-ids") %>>
-                            <a href="/docs/providers/tfe/d/workspace_ids.html">tfe_workspace_ids</a>
+                        <li<%= sidebar_current("docs-datasource-scalr-workspace-ids") %>>
+                            <a href="/docs/providers/scalr/d/workspace_ids.html">scalr_workspace_ids</a>
                         </li>
                     </ul>
                 </li>
 
-                <li<%= sidebar_current("docs-tfe-resource") %>>
+                <li<%= sidebar_current("docs-scalr-resource") %>>
                     <a href="#">Resources</a>
                     <ul class="nav nav-visible">
-                        <li<%= sidebar_current("docs-resource-tfe-notification-configuration") %>>
-                            <a href="/docs/providers/tfe/r/notification_configuration.html">tfe_notification_configuration</a>
-                        </li>
-                        <li<%= sidebar_current("docs-resource-tfe-oauth-client") %>>
-                            <a href="/docs/providers/tfe/r/oauth_client.html">tfe_oauth_client</a>
+                        <li<%= sidebar_current("docs-resource-scalr-variable") %>>
+                            <a href="/docs/providers/scalr/r/variable.html">scalr_variable</a>
                         </li>
 
-                        <li<%= sidebar_current("docs-resource-tfe-organization-x") %>>
-                            <a href="/docs/providers/tfe/r/organization.html">tfe_organization</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-organization-token") %>>
-                            <a href="/docs/providers/tfe/r/organization_token.html">tfe_organization_token</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-policy-set") %>>
-                            <a href="/docs/providers/tfe/r/policy_set.html">tfe_policy_set</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-sentinel-policy") %>>
-                            <a href="/docs/providers/tfe/r/sentinel_policy.html">tfe_sentinel_policy</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-ssh-key") %>>
-                            <a href="/docs/providers/tfe/r/ssh_key.html">tfe_ssh_key</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-team-x") %>>
-                            <a href="/docs/providers/tfe/r/team.html">tfe_team</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-team-access") %>>
-                            <a href="/docs/providers/tfe/r/team_access.html">tfe_team_access</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-team-member-x") %>>
-                            <a href="/docs/providers/tfe/r/team_member.html">tfe_team_member</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-team-members") %>>
-                            <a href="/docs/providers/tfe/r/team_members.html">tfe_team_members</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-team-token") %>>
-                            <a href="/docs/providers/tfe/r/team_token.html">tfe_team_token</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-variable") %>>
-                            <a href="/docs/providers/tfe/r/variable.html">tfe_variable</a>
-                        </li>
-
-                        <li<%= sidebar_current("docs-resource-tfe-workspace") %>>
-                            <a href="/docs/providers/tfe/r/workspace.html">tfe_workspace</a>
+                        <li<%= sidebar_current("docs-resource-scalr-workspace") %>>
+                            <a href="/docs/providers/scalr/r/workspace.html">scalr_workspace</a>
                         </li>
                     </ul>
                 </li>
