--- a/templates/data-sources/variables.md.tmpl
+++ b/templates/data-sources/variables.md.tmpl
@@ -1,4 +1,11 @@
-# {{.Type}} `{{.Name}}`
+---
+title: "{{.Name}}"
+category: "6380b9efad50240652eec1fc"
+slug: "provider_datasource_{{.Name}}"
+parentDocSlug: "provider_datasources"
+hidden: false
+---
+## {{.Type}} Overview
 
 {{ .Description | trimspace }}
 
