--- a/templates/resources/endpoint.md.tmpl
+++ b/templates/resources/endpoint.md.tmpl
@@ -1,8 +1,15 @@
-# {{.Type}} `{{.Name}}`
+---
+title: "{{.Name}}"
+category: "6380b9efad50240652eec1fc"
+slug: "provider_resource_{{.Name}}"
+parentDocSlug: "provider_resources"
+hidden: false
+---
+## {{.Type}} Overview
 
 {{ .Description | trimspace }}
 
-> **WARNING:** This resource is deprecated and will be removed in the next major version.
+> 🚧 This resource is deprecated and will be removed in the next major version.
 
 {{ if .HasExample -}}
 ## Example Usage
