--- a/templates/resources/provider_configuration.md.tmpl
+++ b/templates/resources/provider_configuration.md.tmpl
@@ -1,4 +1,11 @@
-# {{.Type}} `{{.Name}}`
+---
+title: "{{.Name}}"
+category: "6380b9efad50240652eec1fc"
+slug: "provider_resource_{{.Name}}"
+parentDocSlug: "provider_resources"
+hidden: false
+---
+## {{.Type}} Overview
 
 {{ .Description | trimspace }}
 
