--- a/templates/resources/workspace.md.tmpl
+++ b/templates/resources/workspace.md.tmpl
@@ -1,6 +1,6 @@
 ---
 title: "{{.Name}}"
-category: "6380b9efad50240652eec1fc"
+categorySlug: "scalr-terraform-provider"
 slug: "provider_resource_{{.Name}}"
 parentDocSlug: "provider_resources"
 hidden: false
