--- a/templates/index.md.tmpl
+++ b/templates/index.md.tmpl
@@ -5,6 +5,8 @@ slug: "provider_overview"
 order: 0
 hidden: false
 ---
+# {{.ProviderShortName | title}} Provider
+
 The Scalr Terraform provider can be used to manage objects in Scalr with Terraform.
 
 Using the Scalr Terraform provider is a best practice as you scale your Terraform and Scalr operations. It is not required, but many customers have a Scalr admin environment and workspace(s), which use the provider to manage all other objects in Scalr.
@@ -40,7 +42,7 @@ If you have tokens stored in files locally, the `~/.terraform.d/credentials.tfrc
 
 As mentioned, a best practice is to use the Scalr Terraform provider to manage objects within Scalr.
 
-If you are using Scalr to execute the Terraform runs that call the Scalr provider, you must override a default token set for each run. The default token has minimal permissions to allow for the run execution, which means the run will fail if you don't set the `SCALR_TOKEN` variable in the workspace. It is recommended to use a [service account](/docs/identity-and-access-management#service-accounts) for the token.
+If you are using Scalr to execute the Terraform runs that call the Scalr provider, you must override a default token set for each run. The default token has minimal permissions to allow for the run execution, which means the run will fail if you don't set the `SCALR_TOKEN` variable in the workspace. It is recommended to use a [service account](https://docs.scalr.io/docs/identity-and-access-management#service-accounts) for the token.
 
 ![SCALR_TOKEN Variable](https://files.readme.io/2a1d8e3-Screen_Shot_2022-11-28_at_12.19.04_PM.png)
 
