--- a/templates/data-sources/endpoint.md.tmpl
+++ b/templates/data-sources/endpoint.md.tmpl
@@ -5,11 +5,11 @@ slug: "provider_datasource_{{.Name}}"
 parentDocSlug: "provider_datasources"
 hidden: false
 ---
-## {{.Type}} Overview
+## {{.Type}}: {{.Name}}
 
 {{ .Description | trimspace }}
 
-> 🚧 This datasource is deprecated and will be removed in the next major version.
+!> **Warning** This datasource is deprecated and will be removed in the next major version.
 
 {{ if .HasExample -}}
 ## Example Usage
