--- a/templates/data-sources/workspace.md.tmpl
+++ b/templates/data-sources/workspace.md.tmpl
@@ -5,7 +5,7 @@ slug: "provider_datasource_{{.Name}}"
 parentDocSlug: "provider_datasources"
 hidden: false
 ---
-## {{.Type}} Overview
+## {{.Type}}: {{.Name}}
 
 {{ .Description | trimspace }}
 
