--- a/templates/resources.md.tmpl
+++ b/templates/resources.md.tmpl
@@ -5,7 +5,7 @@ slug: "provider_resource_{{.Name}}"
 parentDocSlug: "provider_resources"
 hidden: false
 ---
-## {{.Type}} Overview
+## {{.Type}}: {{.Name}}
 
 {{ .Description | trimspace }}
 
