SCALRCORE-26654 Add skaff readme

--- a/skaff/templates/data_source.tmpl
+++ b/skaff/templates/data_source.tmpl
@@ -16,7 +16,7 @@ import (
 	"github.com/scalr/terraform-provider-scalr/internal/framework/validation"
 )
 
-// Ensure provider defined types fully satisfy framework interfaces.
+// Compile-time interface checks
 var (
 	_ datasource.DataSource                     = &{{ .Name | lowerCamel }}DataSource{}
 	_ datasource.DataSourceWithConfigure        = &{{ .Name | lowerCamel }}DataSource{}
