--- a/skaff/templates/resource.tmpl
+++ b/skaff/templates/resource.tmpl
@@ -18,7 +18,7 @@ import (
 	"github.com/scalr/terraform-provider-scalr/internal/framework/validation"
 )
 
-// Ensure provider defined types fully satisfy framework interfaces.
+// Compile-time interface checks
 var (
 	_ resource.Resource                     = &{{ .Name | lowerCamel }}Resource{}
 	_ resource.ResourceWithConfigure        = &{{ .Name | lowerCamel }}Resource{}
