--- a/templates/data-sources/workspace.md.tmpl
+++ b/templates/data-sources/workspace.md.tmpl
@@ -52,6 +52,8 @@ hidden: false
 - `vcs_provider_id` (String) The identifier of a VCS provider in the format `vcs-<RANDOM STRING>`.
 - `vcs_repo` (List of Object) If a workspace is linked to a VCS repository this block shows the details, otherwise `{}` (see [below for nested schema](#nestedatt--vcs_repo))
 - `working_directory` (String) A relative path that Terraform will execute within.
+- `terragrunt_version` (String) The version of Terragrunt the workspace performs runs on.
+- `terragrunt_use_run_all` (Boolean) Indicates whether the workspace uses `terragrunt run-all`.
 
 <a id="nestedatt--created_by"></a>
 ### Nested Schema for `created_by`
