SCALRCORE-28930 Add example config

--- a/templates/resources/provider_configuration.md.tmpl
+++ b/templates/resources/provider_configuration.md.tmpl
@@ -21,6 +21,8 @@ hidden: false
 
 {{tffile "examples/resources/scalr_provider_configuration/aws-oidc.tf" }}
 
+{{tffile "examples/resources/scalr_provider_configuration/aws-default-tags.tf" }}
+
 To get into more advanced AWS usage please refer to the official [AWS module](https://github.com/Scalr/terraform-scalr-provider-configuration-aws).
 
 ### AzureRM provider
