SCALRCORE-35310 Provider > HCL provider configuration resource flag support

--- a/templates/resources/provider_configuration.md.tmpl
+++ b/templates/resources/provider_configuration.md.tmpl
@@ -41,6 +41,10 @@ To get into more advanced AWS usage please refer to the official [AWS module](ht
 
 {{tffile "examples/resources/scalr_provider_configuration/custom.tf" }}
 
+### Elasticsearch provider
+
+{{tffile "examples/resources/scalr_provider_configuration/elasticstack.tf" }}
+
 {{ .SchemaMarkdown | trimspace }}
 
 {{- if .HasImport }}
