Update templates/ according to rdme v10

--- a/templates/index.md.tmpl
+++ b/templates/index.md.tmpl
@@ -1,9 +1,11 @@
 ---
-title: "Overview"
-categorySlug: "scalr-terraform-provider"
-slug: "provider_overview"
-order: 0
-hidden: false
+title: Overview
+slug: provider_overview
+category:
+  uri: scalr-terraform-provider
+position: 0
+privacy:
+  view: public
 ---
 # {{.ProviderShortName | title}} Provider
 
