--- a/templates/data-sources/variables.md.tmpl
+++ b/templates/data-sources/variables.md.tmpl
@@ -1,9 +1,12 @@
 ---
-title: "{{.Name}}"
-categorySlug: "scalr-terraform-provider"
-slug: "provider_datasource_{{.Name}}"
-parentDocSlug: "provider_datasources"
-hidden: false
+title: {{.Name}}
+slug: provider_datasource_{{.Name}}
+category:
+  uri: scalr-terraform-provider
+parent:
+  uri: provider_datasources
+privacy:
+  view: public
 ---
 ## {{.Type}}: {{.Name}}
 
