--- a/templates/resources.md.tmpl
+++ b/templates/resources.md.tmpl
@@ -1,9 +1,12 @@
 ---
-title: "{{.Name}}"
-categorySlug: "scalr-terraform-provider"
-slug: "provider_resource_{{.Name}}"
-parentDocSlug: "provider_resources"
-hidden: false
+title: {{.Name}}
+slug: provider_resource_{{.Name}}
+category:
+  uri: scalr-terraform-provider
+parent:
+  uri: provider_resources
+privacy:
+  view: public
 ---
 ## {{.Type}}: {{.Name}}
 
