SCALRCORE-35849 Provider > Broken docs due to uri mismatch

--- a/templates/resources.md.tmpl
+++ b/templates/resources.md.tmpl
@@ -2,7 +2,7 @@
 title: {{.Name}}
 slug: provider_resource_{{.Name}}
 category:
-  uri: scalr-terraform-provider
+  uri: Scalr Terraform Provider
 parent:
   uri: provider_resources
 privacy:
